@@ -38,6 +38,8 @@ routines	:=							      \
 
 install-others = $(inst_includedir)/bits/stdio_lim.h
 
+generated = errlist-compat.c
+
 include ../Makeconfig
 
 aux	:= errlist siglist
