@@ -1,5 +1,9 @@
 2002-08-31  Ulrich Drepper  <drepper@redhat.com>
 
+	* stdio-common/Makefile (generated): Add errlist-compat.c.
+
+	* locale/Makefile (extra-objs): Add $(localedef-aux:=.o).
+
 	* locale/localeinfo.h: Pretty printing.
 
 	* stdio-common/vfprintf.c (vfprintf): Remove duplicate ifs in
